Add background image to css stylesheet

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
 body {
-  background: blue;
+  background-image: url("mushbck.jpg");
+  background-repeat: repeat-x;
+  background-attachment: fixed;
+
 }
