--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,22 @@ body {
 
 }
 
+a:link {
+  color: blue;
+}
+
+a:visited {
+  color: red;
+}
+
+a:hover {
+  color: green;
+}
+
+a:active {
+  color: blue;
+}
+
 h1 {
   background-color: white;
 }
@@ -59,6 +75,15 @@ footer {
   padding-right: 20px;
 }
 
+.div5 {
+  width: 920px;
+  margin: auto;
+  border: 3px solid #000000;
+  background-color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 img {
   border: 3px solid #000000;
 }
@@ -67,4 +92,8 @@ img {
   align: left;
   text-indent: 50px;
   padding: 40px;
+}
+
+#seasonparagraph {
+  background:"white";
 }
