--- a/styles.css
+++ b/styles.css
@@ -49,30 +49,24 @@ footer {
 }
 
 .div2 {
-  width: 920px;
+  width: 955px;
   margin: auto;
   border: 3px solid #000000;
   background-color: white;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .div3 {
-  width: 920px;
+  width: 955px;
   margin: auto;
   border: 3px solid #000000;
   background-color: white;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .div4 {
-  width: 920px;
+  width: 955px;
   margin: auto;
   border: 3px solid #000000;
   background-color: white;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .div5 {
@@ -94,6 +88,54 @@ img {
   padding: 40px;
 }
 
-#seasonparagraph {
-  background:"white";
+.responsiveimg1 {
+  height: auto;
+  width: 100%;
+  max-width: 955px;
 }
+
+.mush1 {
+  height: auto;
+  width: 100%;
+  max-width: 400px;
+}
+
+.mush2 {
+  height: auto;
+  width: 100%;
+  max-width: 400px;
+}
+
+.mush3 {
+  height: auto;
+  width: 100%;
+  max-width: 400px;
+}
+
+@media screen and (max-width: 1042px) {
+  h1 {
+    font-size: 1.5em;
+    }
+
+@media screen and (max-width: 1050px) {
+    .div1 {
+      width: 100%;
+    }
+    .div2 {
+      width: 100%;
+    }
+    .div3 {
+      width: 100%;
+    }
+    .div4 {
+      width: 100%;
+    }
+  }
+
+@media screen and (max-width: 1042px) {
+  table {
+    width: 100%;
+    }
+  }
+
+
